<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.LastMatchFragment">

    <!-- TODO: Update blank fragment layout -->
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="150dp"
        android:id="@+id/progress_circular"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rv">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

</FrameLayout>